@@ -1,0 +1,9 @@
+
+	.text
+	.p2align 6
+	.long 0
+
+	.data
+	.p2align 4
+	.long 0
+	
